--- a/testgit.html
+++ b/testgit.html
@@ -10,5 +10,6 @@
     <h1>Titre 1</h1>
     <h2>Titre avec grosse faute</h2>
     <h3> Titre de niveau 3</h3>
+    <h4> Titre de niveau 4</h4>
 </body>
 </html>
