--- a/testgit.html
+++ b/testgit.html
@@ -11,10 +11,8 @@
     <h2>Titre avec grosse faute</h2>
     <h3> Titre de niveau 3</h3>
     <h4> Titre de niveau 4</h4>
-    modif
-    modif2
-    modif3
-    modif4
-    modif5
+    <h5> Titre de niveau 5 </h5>
+    <h6> Titre de niveau 6</h6>
+    <h6> Gontran DERID</h6>
 </body>
 </html>
