--- a/testgit.html
+++ b/testgit.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Titre 1</h1>
     <h2>Titre avec grosse faute</h2>
-    <h3> Titre de niveau 3</h3>
-    <h4> Titre de niveau 4</h4>
+    <h3> Titre de niveau 2</h3>
+    <h4> Titre de niveau 4 bis</h4>
     <h5> Titre de niveau 5 </h5>
     <h6> Titre de niveau 6</h6>
     <h6> Gontran DERID</h6>
